hopefully fixed home page title text being unaligned once and for all

--- a/garfunkia.css
+++ b/garfunkia.css
@@ -1,4 +1,6 @@
 .titlecontainer {
+	display: flex;
+		justify-content: center;
 	position: relative;
 	color:white;
 	width:55vh;
@@ -16,10 +18,9 @@
 	
 }
 .titletext {
-	position: absolute;
+	position: relative;
+	bottom:8vh;
 	text-shadow: 0px 0px 5px rgba(0,0,0,0.6);
-	bottom:5px;
-	left:3.7rem;
 	
 }
 #body{
@@ -205,9 +206,8 @@ p {
 		
 	}
 	.titletext {
-		left:.75rem;
-		
-	}
+
+		}
 	.home p {
 		margin-right:8%;
 		margin-left:8%;
